--- a/vignettes/elixhauser.Rmd
+++ b/vignettes/elixhauser.Rmd
@@ -123,7 +123,7 @@ readmission index scores.
 str(mdcr_results)
 ```
 
-Call `summary` to get a list of summaries which can be used to generate summary
+Call `summary()` to get a list of summaries which can be used to generate summary
 tables.
 
 ```{r}
