add doi to feinstein2024pediatric and feudtner2014pediatric

--- a/vignettes/references.bib
+++ b/vignettes/references.bib
@@ -84,7 +84,8 @@
   number={7},
   pages={e2420579--e2420579},
   year={2024},
-  publisher={American Medical Association}
+  publisher={American Medical Association},
+  url = {https://doi.org/10.1001/jamanetworkopen.2024.20579}
 }
 
 @article{feudtner2014pediatric,
@@ -94,7 +95,8 @@
   volume={14},
   pages={1--7},
   year={2014},
-  publisher={Springer}
+  publisher={Springer},
+  url = {https://doi.org/10.1186/1471-2431-14-199}
 }
 
 @article{glasheen2019,
