--- a/testing/README.Rmd
+++ b/testing/README.Rmd
@@ -20,7 +20,7 @@ packages.  The tests are done in [Docker](https://www.docker.com/) images based
 on the [R-base](https://hub.docker.com/_/r-base) images.
 
 ## System Requirements:
-To run the tests you need 
+To run the tests you need
 
 * [Docker Desktop](https://www.docker.com/products/docker-desktop/)
 * [GNU Make](https://www.gnu.org/software/make/)
@@ -30,13 +30,9 @@ Just run `make` from this directory.
 # Last Testing Results
 
 ```{r}
-checks <-
-  list.files(path = ".", pattern = "00check.log", full.name = TRUE, recursive = TRUE) |>
-  sapply(parse_check, simplify = FALSE)
-checks
-```
+check_logs <- list.files(path = ".", pattern = "00check.log", full.name = TRUE, recursive = TRUE)
+checks <- sapply(check_logs, parse_check, simplify = FALSE)
 
-```{r}
 DF <-
   checks |>
   sapply(
@@ -55,10 +51,22 @@ DF <-
     },
   simplify = FALSE
   )
-  
+
 DF <- do.call(rbind, DF)
 rownames(DF) <- NULL
 
-head(DF)
+DF$suggests <-
+  ifelse(grepl("R-.+without-suggests.+$", DF$checkdir), "Without", "With")
+```
+
+```{r results = "asis"}
+kableExtra::kbl(
+  x = DF[, c("suggests", "status", "errors", "warnings", "notes")],
+  col.names = c("Suggested Packages", "Status", "Errors", "Warnings", "Notes"),
+  align = "cccccc",
+  format = "markdown"
+  ) |>
+kableExtra::pack_rows(index = table(DF$rversion)) |>
+kableExtra::kable_paper(lightable_options = "striped")
 ```
 
