update testing/README.{Rmd md}

--- a/testing/README.Rmd
+++ b/testing/README.Rmd
@@ -69,7 +69,7 @@ DT <-
   ) |>
   rbindlist()
 
-DT[, suggests := fifelse(grepl("R-.+without-suggests.+$", DF$checkdir), "Without Suggested Packages", "With Suggested Packages")]
+DT[, suggests := fifelse(grepl("R-.+without-suggests.+$", DT$checkdir), "Without Suggested Packages", "With Suggested Packages")]
 DT[, checkdir := NULL]
 DT <- unique(DT)
 
