--- a/README.Rmd
+++ b/README.Rmd
@@ -138,8 +138,6 @@ outtable[, encounters := qwraps2::frmt(as.integer(encounters))]
 
 outtable[, method := fifelse(subconditions, paste(method, "(with subconditions)"), method)]
 outtable[, subconditions := NULL]
-
-outtable[, method := paste('<div class="rotated-text">', method, '</div>')]
 ```
 
 In general, the expected time to apply a comorbidity method is the same between
@@ -150,43 +148,34 @@ In general, the expected time to apply a comorbidity method is the same between
 the time of a `data.frame`.
 
 ```{r show-outtable, echo = FALSE, results = "asis"}
-cat("
-<style>
-.rotated-text {
-    transform: rotate(-90deg); /* Rotates the text 90 degrees counter-clockwise */
-    display: inline-block; /* Essential for proper rotation and alignment of inline content */
-    margin-top: 50px; /* Adjust as needed for positioning */
-    margin-left: 50px; /* Adjust as needed for positioning */
-    font-size: 20px;
-    font-weight: bold;
+foo <- function(x) {
+  kbl(
+    x = x,
+    format = "html",
+    escape = FALSE,
+    digits = 2,
+    align = "ccrrrrrr",
+    col.names = c("Encounters", "Data Class", rep(c("Time (seconds)", "Relative time", "Memory (GB)"), times = 2)),
+    caption = "Expected time (seconds), relative time (with respect to data.frame), and expected memory use, by flagging method (current or cumulative), number of encounters, and input data storage format."
+  ) |>
+  collapse_rows(columns = 1, valign = "middle") |>
+  row_spec(row = c(seq(1, nrow(x), by = 6)), background = "#D9D9D9") |>
+  row_spec(row = c(seq(2, nrow(x), by = 6)), background = "#D9D9D9") |>
+  row_spec(row = c(seq(3, nrow(x), by = 6)), background = "#D9D9D9") |>
+  add_header_above(c("", "", "flag.method = 'current'" = 3, "flag.method = 'cumulative'" = 3))
 }
-</style>
-"
-)
 
-kbl(
-  x = outtable,
-  format = "html",
-  escape = FALSE,
-  digits = 2,
-  align = "cccrrrrrr",
-  col.names = c("Method", "Encounters", "Data Class", rep(c("Time (seconds)", "Relative time", "Memory (GB)"), times = 2)),
-  caption = "Expected time (seconds), relative time (with respect to data.frame), and expected memory use, for applying the Charlson (Quan 2005), Elixhauser (Quan 2005), and the PCCC (without and with subconditions) to data sets by flagging method (current or cumulative), number of encounters, and input data storage format."
-) |>
-collapse_rows(columns = 1:2, valign = "middle") |>
-row_spec(row = c(seq(0 * nrow(outtable) / 4 + 1, 1 * nrow(outtable) / 4, by = 6)), background = "#D9D9D9") |>
-row_spec(row = c(seq(0 * nrow(outtable) / 4 + 2, 1 * nrow(outtable) / 4, by = 6)), background = "#D9D9D9") |>
-row_spec(row = c(seq(0 * nrow(outtable) / 4 + 3, 1 * nrow(outtable) / 4, by = 6)), background = "#D9D9D9") |>
-row_spec(row = c(seq(1 * nrow(outtable) / 4 + 1, 2 * nrow(outtable) / 4, by = 6)), background = "#B9B9B9") |>
-row_spec(row = c(seq(1 * nrow(outtable) / 4 + 2, 2 * nrow(outtable) / 4, by = 6)), background = "#B9B9B9") |>
-row_spec(row = c(seq(1 * nrow(outtable) / 4 + 3, 2 * nrow(outtable) / 4, by = 6)), background = "#B9B9B9") |>
-row_spec(row = c(seq(2 * nrow(outtable) / 4 + 1, 3 * nrow(outtable) / 4, by = 6)), background = "#D9D9D9") |>
-row_spec(row = c(seq(2 * nrow(outtable) / 4 + 2, 3 * nrow(outtable) / 4, by = 6)), background = "#D9D9D9") |>
-row_spec(row = c(seq(2 * nrow(outtable) / 4 + 3, 3 * nrow(outtable) / 4, by = 6)), background = "#D9D9D9") |>
-row_spec(row = c(seq(3 * nrow(outtable) / 4 + 1, 4 * nrow(outtable) / 4, by = 6)), background = "#B9B9B9") |>
-row_spec(row = c(seq(3 * nrow(outtable) / 4 + 2, 4 * nrow(outtable) / 4, by = 6)), background = "#B9B9B9") |>
-row_spec(row = c(seq(3 * nrow(outtable) / 4 + 3, 4 * nrow(outtable) / 4, by = 6)), background = "#B9B9B9") |>
-add_header_above(c("", "", "", "flag.method = 'current'" = 3, "flag.method = 'cumulative'" = 3))
+cat("\n### Benchmarking Charlson (Quan 2005)\n\n")
+foo(x = outtable[method == "charlson_quan2005", -"method"])
+
+cat("\n### Benchmarking Elixhauser (Quan 2005)\n\n")
+foo(x = outtable[method == "elixhauser_quan2005", -"method"])
+
+cat("\n### Benchmarking PCCC v3.1 (without subconditions)\n\n")
+foo(x = outtable[method == "pccc_v3.1", -"method"])
+
+cat("\n### Benchmarking PCCC v3.1 (with subconditions)\n\n")
+foo(x = outtable[method == "pccc_v3.1 (with subconditions)", -"method"])
 ```
 
 
